tests/ui/ambiguous_method_call.stderr
[tests/ui/ambiguous_method_call.pea:8:5-8:17] error: the type of this value must be known in this context

error: aborting due to 1 previous error

