tests/ui/ambiguous_method_call.pea
fn main() {
    let value = if true {
        return;
    } else {
        return;
    };

    ((((value)))).foo();
}
